[package]
name = "rita_client"
version = "0.21.2"
edition = "2018"
license = "Apache-2.0"


[dependencies]
compressed_log = "0.5"
num-traits = "0.2"
num256 = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
hex-literal = "0.3"
rita_common = { path = "../rita_common" }
log = { version = "0.4", features = ["release_max_level_info"] }
althea_types = { path = "../althea_types" }
althea_kernel_interface = { path = "../althea_kernel_interface" }
antenna_forwarding_client = { path = "../antenna_forwarding_client" }
settings = { path = "../settings" }
sha3 = "0.10"
lettre = "0.10"
rand = "0.8.0"
phonenumber = "0.3"
babel_monitor = { path = "../babel_monitor" }
arrayvec = { version = "0.7", features = ["serde"] }
sodiumoxide = "0.2"
web30 = "1.0"
awc = "3.1"
ipnetwork = "0.20"
actix-async = { package = "actix", version = "0.13" }
actix-web-async = { package = "actix-web", version = "4.3", default_features = false, features = [
    "openssl",
] }
clarity = "1.2"
openssh-keys = "0.6"
mac_address = "1.1.4"
futures = { version = "0.3", features = ["compat"] }

[lib]
name = "rita_client"
path = "src/lib.rs"

[features]
# changes operator urls
operator_debug = []
dev_env = []
