[package]
name = "rita_client_registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
althea_types = { path = "../althea_types" }
log = { workspace = true }
serde = "1.0"
clarity = { workspace = true }
phonenumber = "0.3"
awc = {workspace = true}
web30 = { workspace = true }
tokio = { version = "1.21", features = ["macros", "time"] }
actix = "0.13"
futures = { version = "0.3", features = ["compat"] }
