[package]
name = "rita_client_registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5"
althea_types = { path = "../althea_types" }
log = { version = "0.4", features = ["release_max_level_info"] }
serde = "1.0"
clarity = "1.4"
phonenumber = "0.3.6"
awc = "3.5"
web30 = "1.4"
tokio = { version = "1.40", features = ["macros", "time"] }
actix = "0.13"
futures = { version = "0.3", features = ["compat"] }
num-traits = "0.2"

[dev-dependencies]
rand = "0.8"
