[package]
name = "rita_common"
version = "0.20.30"
edition = "2018"
license = "Apache-2.0"

[dependencies]
rand = "0.8.0"
ipnetwork = "0.20"
serde_derive = "1.0"
hex-literal = "0.4.1"
docopt = "1.1"
serde = "1.0"
bytes = "1.0"
compressed_log = "0.5.6"
byteorder = { version = "1.4", features = ["i128"] }
arrayvec = {version= "0.7", features = ["serde"]}
babel_monitor = { path = "../babel_monitor" }
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
actix-async = {package="actix", version = "0.13"}
auto-bridge = {path = "../auto_bridge"}
serde_json = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
settings = { path = "../settings" }
clarity = "0.5"
futures = { version = "0.3", features = ["compat"] }
num256 = "0.3"
num-traits="0.2"
bincode = "1.3"
serde_cbor = "0.11"
lazy_static = "1.4"
althea_kernel_interface = { path = "../althea_kernel_interface" }
actix-web-httpauth-async = { package="actix-web-httpauth", version = "0.8.0"}
actix-web-async = { package="actix-web", version = "4.3", default_features = false, features= ["openssl"]}
awc = {version = "3.1", default-features = false, features=["openssl", "compress-gzip", "compress-zstd"]}
actix-service = "2.0.2"
web30 = "0.22"
althea_types = { path = "../althea_types" }

[dependencies.regex]
version = "1.6"
default-features = false
features = ["std"]

[dev-dependencies]
env_logger = "0.10"

[features]
# disables cors for dash debugging
dash_debug = []
integration_test = []
integration_test_v2 = []
