[package]
name = "rita_common"
version = "0.21.5"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rand = "0.8.5"
ipnetwork = "0.20"
serde_derive = "1.0"
serde = "1.0"
bytes = "1.7"
compressed_log = "0.5.6"
byteorder = { version = "1.5", features = ["i128"] }
arrayvec = { version = "0.7", features = ["serde"] }
babel_monitor = { path = "../babel_monitor" }
flate2 = { version = "1.0", features = [
    "rust_backend",
], default-features = false }
actix = { workspace = true }
auto-bridge = { path = "../auto_bridge" }
serde_json = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
settings = { path = "../settings" }
clarity = {workspace = true}
futures = { version = "0.3", features = ["compat"] }
num256 = "0.5"
num-traits = "0.2"
bincode = "1.3"
serde_cbor = "0.11"
lazy_static = "1.5"
althea_kernel_interface = { path = "../althea_kernel_interface" }
actix-web-httpauth = {workspace = true}
actix-web = {workspace=true}
awc = {workspace = true}
actix-service = "2.0.2"
web30 = {workspace = true}
althea_types = { path = "../althea_types" }
deep_space = {workspace = true}
prost-types ="0.13"
cosmos-sdk-proto-althea = {package = "cosmos-sdk-proto-althea", version = "0.18", features = ["ethermint"]} 
althea_proto = {workspace = true}
crossbeam = "0.8"
phonenumber = "0.3.6"
lettre = "0.10"
sha3 = "0.10"
hex-literal = "0.4"

[dependencies.regex]
version = "1.11"
default-features = false
features = ["std"]

[dev-dependencies]
env_logger = "0.11"
serial_test = "3.1.1"

[features]
development = []
# disables cors for dash debugging
dash_debug = []
legacy_integration_test = []
integration_test = []
