[package]
name = "rita_db_migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8"
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
log = { version = "0.4", features = ["release_max_level_info"] }
dotenv = "0.15"
althea_types = { path = "../althea_types" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rita_client_registration = { path = "../rita_client_registration" }
clarity = "1.2"
web30 = "1.0"
