[package]
name = "rita_exit"
version = "0.21.5"
edition = "2021"
license = "Apache-2.0"


[dependencies]
num256 = "0.5"
rita_common = { path = "../rita_common" }
rita_client_registration = { path = "../rita_client_registration" }
althea_kernel_interface = { path = "../althea_kernel_interface" }
althea_types = { path = "../althea_types" }
settings = { path = "../settings" }
babel_monitor = { path = "../babel_monitor" }
actix-async = { package = "actix", version = "0.13"}
awc = {workspace = true}
handlebars = "5.1"
lazy_static = "1.5"
ipnetwork = "0.20"
clarity = {workspace = true}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lettre = { version = "0.11", features = ["file-transport"] }
phonenumber = "0.3.6"
log = { version = "0.4", features = ["release_max_level_info"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
actix-web-async = { package = "actix-web", version = "4.9", default-features = false, features = [
    "openssl",
] }
deep_space = { workspace = true }
web30 = "1.4"
crypto_box = "0.9"

[features]
# changes operator urls
operator_debug = []
dev_env = []
development = []
