[package]
name = "rita_exit"
version = "0.21.5"
edition = "2021"
license = "Apache-2.0"


[dependencies]
num256 = "0.5"
exit_trust_root = { path = "../exit_trust_root" }
rita_common = { path = "../rita_common" }
althea_kernel_interface = { path = "../althea_kernel_interface" }
althea_types = { path = "../althea_types" }
settings = { path = "../settings" }
babel_monitor = { path = "../babel_monitor" }
actix = {workspace = true}
awc = {workspace = true}
handlebars = "5.1"
ipnetwork = "0.20"
clarity = {workspace = true}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lettre = { version = "0.10", features = ["file-transport"] }
phonenumber = "0.3.6"
log = { version = "0.4", features = ["release_max_level_info"] }
actix-web = {workspace = true}
deep_space = { workspace = true }
web30 = "1.4"
crypto_box = "0.9"

[features]
# changes operator urls
operator_debug = []
dev_env = []
development = []
