[package]
name = "settings"
version = "0.1.0"
authors = ["Ben <wangben3@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
config = "0.10"
althea_types = { path = "../althea_types", features = ["actix"]}
althea_kernel_interface = { path = "../althea_kernel_interface" }
num256 = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
log = "0.4"
failure = "0.1"
owning_ref = "0.4"
lazy_static = "1.4"
clarity = "0.1"
arrayvec = {version= "0.5", features = ["serde"]}
