[package]
name = "stats_server"
version = "0.1.0"
authors = ["kingoflolz <wangben3@gmail.com>"]

[dependencies]
actix = { git = "https://github.com/actix/actix" }
actix-web = { git = "https://github.com/actix/actix-web", default-features = false, branch = "fix-missing-content-length"}
serde = "1.0.24"
serde_derive = "1.0.24"
serde_json = "1.0.8"
failure = "0.1.1"
log = "^0.4"
env_logger = "^0.5.5"
futures = "0.1"
althea_types = { path = "../althea_types", features = ["actix"]}
docopt = "0.8.3"
