[package]
name = "stats_server"
version = "0.1.0"
authors = ["kingoflolz <wangben3@gmail.com>"]

[dependencies]
actix = "0.7.4"
actix-web = { version = "0.7.4", default-features = false }
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
failure = "0.1.2"
log = "0.4.3"
env_logger = "0.5.11"
futures = "0.1.23"
althea_types = { path = "../althea_types", features = ["actix"]}
docopt = "0.8.3"
