[package]
name = "test_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tester"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
docopt = "1.1"
ctrlc = {version = "3.4.5", features = ["termination"]}
awc = {workspace = true}
actix-rt = "2.10"
integration_tests = { path = "../integration_tests" }
althea_types = { path = "../althea_types" }
althea_kernel_interface = { path = "../althea_kernel_interface" }
deep_space = { version = "2", features = ["althea"] }
web30 = "1.4"
clarity = "1.5"

[dev-dependencies]
actix = "0.13"
futures = "0.3"
