[package]
name = "usage_tracker_collection"
version = "0.1.0"
edition = "2021"


[dependencies]
rita_common = { path = "../rita_common"}
althea_types = { path = "../althea_types"}
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
num256 = "0.3"
settings = { path = "../settings" }
bincode = "1.3"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_info"] }
walkdir = "2"
chrono = "0.4"
rand = "0.3"
clarity = "0.5"